Source/WebCore/bindings/js/ReadableStreamJSSource.h
@@ -32,7 +32,6 @@
 
 #if ENABLE(STREAMS_API)
 
-#include "JSReadableStreamController.h"
 #include "ReadableStream.h"
 #include "ReadableStreamReader.h"
 #include "ReadableStreamSource.h"
@@ -43,6 +42,10 @@
 #include <wtf/Ref.h>
 
 namespace WebCore {
+
+class JSDOMGlobalObject;
+class ReadableJSStream;
+class ReadableStreamController;
 
 class ReadableStreamJSSource: public ReadableStreamSource {
 public:
@@ -57,15 +60,15 @@ private:
 
     // Object passed to constructor.
     JSC::Strong<JSC::JSObject> m_source;
-
-    JSC::Strong<JSReadableStreamController> m_controller;
 };
 
 class ReadableJSStream: public ReadableStream {
 public:
     static Ref<ReadableJSStream> create(JSC::ExecState&, ScriptExecutionContext&);
     virtual Ref<ReadableStreamReader> createReader() override;
+
     ReadableStreamJSSource& jsSource();
+    JSC::JSValue jsController(JSC::ExecState&, JSDOMGlobalObject*);
 
 private:
     ReadableJSStream(ScriptExecutionContext&, Ref<ReadableStreamJSSource>&&);
@@ -76,6 +79,8 @@ private:
     private:
         explicit Reader(ReadableJSStream&);
     };
+
+    std::unique_ptr<ReadableStreamController> m_controller;
 };
 
 void setInternalSlotToObject(JSC::ExecState*, JSC::JSValue, JSC::PrivateName&, JSC::JSValue);
